# teddy

./: '  .app  .gitignore  Cargo.toml  Justfile  ]  file.nix  flake.nix  rustfmt.toml
.devcontainer/: devcontainer.json
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 4a3qxnlq7r1gjwfjfqrizpf30hh22bz1-source  6zgq648mrfc24v4qc2xd0xl8ym764d1z-source  c255ddi1b5z523cq2dncqw0n7jspg7cj-source  c86ia1rqbmh99glf44ma73arz08azw29-source  nz08m3k36g54lpn4fp94m8gzhz28wgkd-source
.github/workflows/: ci.yaml
examples/: test.rs
src/: action.rs  app.rs  application.rs  component.rs  config.rs  events.rs  keycapture.rs  lib.rs  logging.rs  main.rs  panic_handler.rs  state.rs  tui.rs
src/application/: app.rs
src/buffer/: buffer.rs  mod.rs  placeholder.rs
src/components/: file_picker.rs
src/editor/: editor.rs  editor_mode.rs  error.rs  macros.rs  mod.rs
src/frame/: frame.rs  manager.rs  mod.rs
src/keybind/: builder.rs  keybind.rs
teddy/: Cargo.toml
teddy/src/: action.rs  app.rs  component.rs  lib.rs  logging.rs  main.rs  panic_handler.rs  prelude.rs  tui.rs
teddy/src/buffer/: buffer.rs  placeholder.rs
teddy/src/buffers/: buffer.rs  mod.rs  placeholder.rs
teddy/src/components/: file_picker.rs  mod.rs
teddy/src/editor/: editor.rs  editor_mode.rs  mod.rs
teddy/src/frame/: default_bindings.rs  frame.rs  keybinding.rs  manager.rs  mod.rs  notification_manager.rs
teddy/src/inputresolver/: context.rs  input_manager.rs  inputresolver.rs  inputresolverv2.rs  macro_resolver.rs  mod.rs  utils.rs
teddy/src/inputresolver/commands/: echo.rs  mod.rs  quit.rs  write.rs  write_and_quit.rs
teddy/src/inputresolver/input/: input_manager.rs  mod.rs
teddy/src/inputresolver/input/command_manager/: mod.rs
teddy/src/inputresolver/input/command_manager/commands/: echo.rs  mod.rs  quit.rs  write.rs  write_and_quit.rs
teddy/src/inputresolver/input/keybind_manager/: mod.rs
teddy/src/keybind/: mod.rs
teddy/src/ui/: mod.rs  statusbar.rs  underbar.rs
teddy/src/ui/frame_manager/: mod.rs  statusbar.rs
teddy/src/ui/render_wrappers/: mod.rs  notification_manager.rs
teddy_config/: Cargo.toml
teddy_config/src/: lib.rs
teddy_core/: Cargo.toml
teddy_core/src/: action.rs  buffer.rs  component.rs  input_mode.rs  lib.rs
teddy_cursor/: Cargo.toml
teddy_cursor/src/: cursor.rs  cursor_line.rs  lib.rs
teddy_events/: Cargo.toml
teddy_events/src/: crossterm.rs  events.rs  lib.rs
