
[workspace]
resolver = "2"
members = ["./teddy_cursor"]


[package]
name = "teddy"
version = "0.1.0"
edition = "2021"

[dependencies]
teddy_cursor = { path = "./teddy_cursor" }

tokio = { version = "*", features = ["sync", "rt", "macros", "rt-multi-thread"]}
crossterm = { version = "*", features = ["serde", "event-stream"]}
ropey = "1.6.1"
clier_parser = "0.7.4"
ratatui = "0.27.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["registry", "fmt"] }
color-eyre = "0.6.3"
tokio-stream = "0.1.15"
futures = "0.3.30"
rand = "0.8.5"
