
[workspace]
resolver = "2"
members = ["teddy_cursor", "teddy", "teddy_events", "teddy_core"]

[workspace.dependencies]
tokio = { version = "1.39", features = ["sync", "rt", "macros", "rt-multi-thread"]}
crossterm = { version = "*", features = ["serde", "event-stream"]}
tracing = "0.1"
ratatui = "0.27.0"
